gcc/testsuite/gcc.target/i386/pr41985.c
/* PR target/41985 */
/* { dg-do compile } */
/* { dg-options "" } */

int
main ()
{
  int i;
  asm volatile ("# %&": : "g" (i));	/* { dg-error "used without any local dynamic TLS references" } */
  return 0;
}
